--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
         android:label="tripper"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBwaWEesD-XkBMmZG3DJl1kECmr9zK5fkw"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
