--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  shared_preferences: ^2.2.2
+  hooks_riverpod: ^2.4.9
+  rxdart: ^0.27.7
+  google_maps_flutter: ^2.2.8
 
 dev_dependencies:
   flutter_test:
