--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   hooks_riverpod: ^2.4.9
   rxdart: ^0.27.7
   google_maps_flutter: ^2.2.8
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
