--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,11 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   go_router: ^13.0.1
-  flutter_hooks: ^0.20.4
-  flutter_riverpod: ^2.4.9
   riverpod_annotation: ^2.3.3
   freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  flutter_hooks: ^0.20.4
+  flutter_riverpod: ^2.4.9
   flutter_localizations:
     sdk: flutter
   intl: any
@@ -26,6 +27,8 @@ dependencies:
   geolocator: ^10.1.0
   flutter_gemini: ^2.0.1
   flutter_config: ^2.0.2
+  package_info_plus: ^5.0.1
+  flutter_google_places_sdk: ^0.2.2
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +39,7 @@ dev_dependencies:
   custom_lint: ^0.5.8
   riverpod_lint: ^2.3.7
   freezed: ^2.4.6
+  json_serializable: ^6.7.1
 
 # The following section is specific to Flutter packages.
 flutter:
