All selectors working. Search not implemented yet

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   package_info_plus: ^5.0.1
   flutter_google_places_sdk: ^0.2.2
   flutter_google_maps_webservices: ^1.1.1
+  clock: ^1.1.1
+  debounce_throttle: ^2.0.0
 
 dev_dependencies:
   flutter_test:
