Create first unit tests

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dev_dependencies:
   riverpod_lint: ^2.3.7
   freezed: ^2.4.6
   json_serializable: ^6.7.1
+  mocktail: ^1.0.3
 
 # The following section is specific to Flutter packages.
 flutter:
