--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -46,6 +46,21 @@
             "args": [
                 "--web-renderer=html",
             ]
-        }
+        },
+        {
+            "name": "Golden",
+            "request": "launch",
+            "type": "dart",
+            "codeLens": {
+                "path": "test/visual",
+                "for": [
+                    "run-test",
+                    "run-test-file"
+                ]
+            },
+            "args": [
+                "--update-goldens"
+            ]
+        },
     ]
 }
